--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slugify",
+  "name": "@alirezark/slugify",
   "version": "1.6.5",
   "description": "Slugifies a String",
   "keywords": [
